[tool.poetry]
authors = ["metrikspacex <metrikspacex@gmail.com>"]
description = "algorithms"
name = "learn-programming"
packages = [{ include = "src/python/" }]
readme = "readme.md"
version = "1.0.0"

[tool.poetry.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
