cmake_minimum_required(VERSION 3.0.0)

FILE(GLOB children *)
FOREACH(child ${children})
  IF(IS_DIRECTORY ${child})
    GET_FILENAME_COMPONENT(source_name ${child} NAME_WE)
    IF("${source_name}" STREQUAL "course")
        FILE(GLOB subchildren ${child}/*)
        FOREACH(subchild ${subchildren})
          IF(IS_DIRECTORY ${subchild})
            GET_FILENAME_COMPONENT(source_name ${subchild} NAME_WE)
            SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/hackerrank/course/${source_name})
            SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/hackerrank/course/${source_name})
            SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/hackerrank/course/${source_name})
            ADD_EXECUTABLE(hackerrank_course_${source_name} "${subchild}/main.c")
          ENDIF()
        ENDFOREACH()
    ELSE()
      GET_FILENAME_COMPONENT(source_name ${child} NAME_WE)
      SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/hackerrank/${source_name})
      SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/hackerrank/${source_name})
      SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/hackerrank/${source_name})
      ADD_EXECUTABLE(hackerrank_${source_name} "${child}/main.c")
    ENDIF()
  ENDIF()
ENDFOREACH()
